# bbdb

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in
bits/: bbdb-adapt-ispell.el  bbdb-edit.el  bbdb-gnokii.el  bbdb-ldif.el  bbdb-mail-folders.el  bbdb-mew.el  bbdb-obsolete.el  bbdb-pgp.el  bbdb-signature.el  bbdb-sort-mailrc.el  bbdb-vcard-export.el  bbdb-vcard-import.el  bbdbpalm.el  gnus-bbdb.el  make.bat  vcard.el
debian/: .gitignore  Makepatch  README.Debian  README.debian  README.source  bbdb-areacode-split.1  bbdb-areacode-split.pl.1  bbdb-cid.1  bbdb-cid.pl.1  bbdb-pilot-jwz.el  bbdb-srv.1  bbdb-srv.pl.1  bbdb-unlazy-lock.1  bbdb-unlazy-lock.pl.1  bbdb.doc-base  bbdb.docs  bbdb.emacsen-install  bbdb.emacsen-remove  bbdb.emacsen-startup  bbdb.info  bbdb.install  bbdb.manpages  bbdb3.install  changelog  control  copyright  dirs  doc-base  docs  emacsen-install  emacsen-remove  emacsen-startup  lispMakepatch  postinst  prerm  rules  watch
debian/patch/: Makefile.patch
doc/: Makefile.am  Makefile.in  bbdb.texi
html/: bbdb.css  bbdb.html  bbdb_1.html  bbdb_2.html  bbdb_3.html  bbdb_4.html  bbdb_abt.html  bbdb_fot.html  bbdb_ovr.html  bbdb_toc.html  faq.html  index.html
html/patches/: bbdb-print.patch  multi-record.patch
lisp/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  auto-autoloads.el  bbdb-anniv.el  bbdb-com.el  bbdb-ftp.el  bbdb-gnus-aux.el  bbdb-gnus.el  bbdb-gui.el  bbdb-hooks.el  bbdb-ispell.el  bbdb-merge.el  bbdb-message.el  bbdb-mhe.el  bbdb-migrate.el  bbdb-mu4e.el  bbdb-mua.el  bbdb-notmuch.el  bbdb-pgp.el  bbdb-print.el  bbdb-reportmail.el  bbdb-rmail.el  bbdb-sc.el  bbdb-site.el.in  bbdb-snarf.el  bbdb-srv.el  bbdb-tex.el  bbdb-uuid.el  bbdb-version.el.in  bbdb-vm-aux.el  bbdb-vm.el  bbdb-w3.el  bbdb-whois.el  bbdb-wl.el  bbdb-xemacs.el  bbdb.el  makefile-temp
m4/: bbdb_pre_init.m4  bbdb_with_vm.m4  emacs_mu4e.m4  emacs_notmuch.m4  emacs_vm.m4  emacs_wl.m4  package_date.m4
misc/: bbdb-canonicalize-lt.el
testing/: Makefile.in  bbdb-test  bbdb-test.el  run-tests.el
tex/: Makefile.am  Makefile.in  bbdb-cols.tex  bbdb-print-brief.tex  bbdb-print.tex  bbdb.sty
texinfo/: .cvsignore  .gitignore  Makefile  Makefile.in  bbdb.texinfo  infohack.el
texinfo/bbdb/: bbdb.html  bbdb_1.html  bbdb_2.html  bbdb_3.html  bbdb_abt.html  bbdb_fot.html  bbdb_toc.html
utils/: .gitignore  Makefile.in  bbdb-cid.pl  bbdb-srv.pl  bbdb-unlazy-lock.pl
