dnl configure.in --- configuration setup for BBDB

dnl Author:        Didier Verna <didier@xemacs.org>
dnl Maintainer:    Didier Verna <didier@xemacs.org>
dnl Created:       Tue Nov 14 18:28:52 2000
dnl Last Revision: Tue Jan  2 16:47:01 2001

dnl Copyright (C) 2000-2001 Didier Verna

dnl BBDB is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU Library General Public License as published
dnl by the Free Software Foundation; either version 2 of the License, or (at
dnl your option) any later version.

dnl BBDB is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU Library General Public License for more details.

dnl You should have received a copy of the GNU Library General Public License
dnl along with this program; if not, write to the Free Software Foundation,
dnl Inc., 675 Mass Ave, Cambridge, MA 02139, USA.


dnl Process this file with autoconf to produce a new configure script

AC_PREREQ(2.13)
AC_INIT(lisp/bbdb.el)

dnl Common system utilities checking:
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LN_S

dnl External programs checking:
BBDB_PROG_GNU_TAR
BBDB_PROG_COMPRESS
BBDB_PROG_MAKEINFO
BBDB_PROG_TEXI2DVI
BBDB_PROG_ETAGS
BBDB_PROG_EMACS

dnl Some customizations:
AC_SUBST(GNUSDIR)
AC_ARG_WITH([gnus-dir],
  [  --with-gnus-dir=DIR     set the location of Gnus to DIR],
  [ GNUSDIR="${withval}" ])

AC_SUBST(MHEDIR)
AC_ARG_WITH([mhe-dir],
  [  --with-mhe-dir=DIR      set the location of Mh-E to DIR],
  [ MHEDIR="${withval}" ])

AC_SUBST(VMDIR)
AC_ARG_WITH([vm-dir],
  [  --with-vm-dir=DIR       set the location of VM   to DIR],
  [ VMDIR="${withval}" ])

AC_SUBST(OTHERDIRS)
AC_ARG_WITH([other-dirs],
  [  --with-other-dirs=DIRS  set other needed directories
                          (DIRS is a list of space or colon separated paths)],
  [ BBDB_COLON_TO_SPACE(withval)
    OTHERDIRS="${withval}" ])

AC_SUBST(PACKAGEDIR)
AC_ARG_WITH([package-dir],
  [  --with-package-dir=DIR  set the XEmacs package directory to DIR
                          (/usr/local/lib/xemacs/site-packages by default)],
  [ PACKAGEDIR="${withval}" ],
  [ PACKAGEDIR="/usr/local/lib/xemacs/site-packages" ])

AC_SUBST(SYMLINKS)
AC_ARG_WITH([symlinks],
  [  --with-symlinks         install BBDB by linking instead of copying],
  [ SYMLINKS="${withval}" ],
  [ SYMLINKS="no" ])

AC_SUBST(LINKPATH)
AC_ARG_WITH([linkpath],
  [  --with-linkpath=PATH     path to symlink from if \`pwd' does not work],
  [ LINKPATH="${withval}" ])

AC_OUTPUT(Makefile lisp/Makefile texinfo/Makefile tex/Makefile utils/Makefile)
